[package]
name = "trc-tuner"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.3"
#rust-embed = "5.1.0"
serde = "1.0"
serde_derive = "1.0"
clap = {version = "~2.33.0", features = ["yaml"]}
lexical = "4.0.0"

[dependencies.rust-embed]
version = "5.1.0"
features = ["debug-embed"]
